	* sysdeps/unix/sysv/linux/sigtimedwait.c (do_sigtimedwait): Likewise.
	* sysdeps/unix/sysv/linux/sigprocmask.c (__sigprocmask): Likewise.
	* sysdeps/generic/sigfillset.c (sigfillset): Don't set SIGSETXID.

	* sunrpc/get_myaddr.c (get_myaddress): Fix test for failing
	getifaddrs call.
	* sunrpc/pmap_clnt.c (__get_myaddress): Likewise.
	* sunrpc/pmap_rmt.c (getbroadcastnets): Likewise.

	* malloc/arena.c (ptmalloc_init): Allow MALLOC_CHECK_==0 to
	disable all checking.

	* sysdeps/unix/sysv/linux/ia64/bits/siginfo.h (si_flags): Add
	support to get this value.

2004-09-28  Jakub Jelinek  <jakub@redhat.com>

	* io/utime.h (utime): Allow second argument to be NULL.

2004-09-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): If NAME is a numerical IP
	address and AI_CANONNAME is set, return copy of NAME as ai_canonname.

2004-09-27  Andreas Jaeger  <aj@suse.de>

	* sysdeps/i386/dl-machine.h (elf_machine_rela_relative): Replace
	static inline by auto inline, add always_inline attribute.
	(elf_machine_rel): Likewise.
	(elf_machine_rela): Likewise.
	(elf_machine_lazy_rel): Likewise.
	(elf_machine_lazy_rela): Likewise.
	(elf_machine_rel_relative): Likewise.

2004-09-27  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/xdr_intXX_t.c: Add xdr_quad_t and xdr_u_quad_t aliases.
	* sunrpc/rpc/xdr.h: Declare xdr_quad_t and xdr_u_quad_t.
	* sunrpc/rpc_parse.c (get_type): Use "quad_t" for TOK_HYPER.
	Otherwise isvectordef will loop infinitely if typedef hyper int64_t
	is seen.
	(unsigned_dec): Use "u_quad_t" for similar reasons.
	* sunrpc/Versions: Export xdr_quad_t and xdr_u_quad_t.

2004-09-27  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/bits/waitstatus.h (__WIFSIGNALED): Simplify bit
	twiddling in last change.

	* posix/tst-waitid.c (do_test): Add tests for waitpid with WCONTINUED.

	[BZ #409]
	* posix/sys/wait.h [__WIFCONTINUED] (WIFCONTINUED): New macro.
	* stdlib/stdlib.h [__WIFCONTINUED] (WIFCONTINUED): New macro.